fixed song on re-render not showing

--- a/src/app/shared/layout/current-music/currentmusic.component.css
+++ b/src/app/shared/layout/current-music/currentmusic.component.css
@@ -14,9 +14,12 @@
 .current-music span {
     color:black;
 }
+.image {
+  border-radius: 50%;
+}
 .img {
-  width:60px;
-  height:60px;
+  width:50px;
+  height:50px;
   border-radius: 50%;
   animation: rotate 4s linear infinite;
 }
